--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,35 @@ project(GameOfLife LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# --- Dependencies ---
+include(FetchContent)
 
+# SFML (download via FetchContent)
+FetchContent_Declare(
+    sfml
+    GIT_REPOSITORY https://github.com/SFML/SFML.git
+    GIT_BRANCH main  # or a specific commit
+)
 
-# --- vcpkg toolchain ---
+FetchContent_MakeAvailable(sfml)
 
+# ImGui (download via FetchContent)
+FetchContent_Declare(
+    imgui
+    GIT_REPOSITORY https://github.com/ocornut/imgui.git
+    GIT_TAG v1.89.8   # or latest stable
+)
 
-# --- Find dependencies ---
-# SFML 3 installed via vcpkg
-find_package(SFML CONFIG REQUIRED COMPONENTS Graphics Window System)
+FetchContent_MakeAvailable(imgui)
 
-# ImGui and fmt installed via vcpkg
-find_package(imgui CONFIG REQUIRED)
-find_package(fmt CONFIG REQUIRED)
+# fmt (system-installed)
+FetchContent_Declare(
+    fmt
+    GIT_REPOSITORY https://github.com/fmtlib/fmt.git
+    GIT_TAG 10.1.1  # or whatever version you want
+)
+
+FetchContent_MakeAvailable(fmt)
 
 # --- Executable ---
 add_executable(gameOfLife
@@ -28,14 +45,8 @@ add_executable(gameOfLife
 target_include_directories(gameOfLife PRIVATE src)
 
 # --- Link libraries ---
-target_link_libraries(gameOfLife
-    PRIVATE
-        SFML::Graphics
-        SFML::Window
-        SFML::System
-        imgui::imgui
-        fmt::fmt
-)
+target_link_libraries(gameOfLife PRIVATE sfml-graphics sfml-window sfml-system)
+target_link_libraries(gameOfLife PRIVATE fmt::fmt)
 
 # --- Compiler options ---
 if(MSVC)
